Basic migration to Micronaut